--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 							<div class="container">
 								<div  aria-label="Breadcrumbs" class="breadcrumbs breadcrumb-trail">
 								<ul class="trail-items">
-									<li class="trail-item trail-end"><span>חליפות פשתן</span></li>
+									<li class="trail-item trail-begin"><a href="" rel="home"> <span>חליפות פשתן</span></li>
 									<li class="trail-item"><a href=""><span>חליפות נשים</span></a></li>
 									<li class="trail-item"><a href=""><span>עמוד הבית</span></a></li>
 									<li class="trail-item"><a href=""><span>בגדים</span></a></li>
-									<li class="trail-item trail-begin"><a href="" rel="home"><span>שורט אידריס</span></a></li>
+									<li class="trail-item"><span>שורט אידריס</span></li>
 								</ul>
 								</div> <!-- .breadcrumbs -->
 							</div> <!-- .container -->
@@ -121,7 +121,7 @@
 												<div class="choose-color">
 													<ul>
 														<li class="pink-color">
-															<a href="#"><span class="screen-reader-text"> Pink</span></a>
+															<a href="#" class="active"><span class="screen-reader-text"> Pink</span></a>
 														</li>
 														<li class="orange-color">
 															<a href="#"> <span class="screen-reader-text">Oriange</span></a>
@@ -137,15 +137,16 @@
 											</div>
 											<div class="size-select clear-fix">
 												<div class="size-title-wrapper">
-													<h3><a href="#">מדריך מידות </a></h3>
 													<h3>בחירת מידה:</h3>
+													<h3><a href="#">מדריך מידות </a></h3>
+													
 												</div><!-- size-title-wrapper -->
-												<table class="product-size">
-													<td><a href="#">L</a></td>
-													<td><a href="#">M</a></td>
-													<td><a href="#">S</a></td>
-													<td><a href="#">XL</a></td>
-												</table>
+												<ul class="product-size">
+													<li><a href="#">L</a></li>
+													<li><a href="#">M</a></li>
+													<li><a href="#">S</a></li>
+													<li class="active"><a href="#">XL</a></li>
+												</ul>
 											</div><!-- size-select  -->
 											<div class="product-quantity clear-fix">
 												<span class="minus">-</span>
