--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li class="trail-item trail-begin">
                       <a href="" rel="home">
                         <span>חליפות פשתן</span>
+						</a>
                     </li>
                     <li class="trail-item">
                       <a href="">
@@ -150,7 +151,7 @@
                       <!-- inner-wrapper -->
                     </div>
                     <!-- .single-thumb-detail -->
-                    <div class="share-on">
+                    <div class="share-on mobile-hide">
                       <ul>
                         <li>
                           <a target="_blank" href="#">
@@ -168,13 +169,17 @@
                   <!-- product-thumb-main -->
                   <div class="summary entry-summary">
                     <div class="product-item-details">
-                      <h2 class="product-title">שורט אידריס</h2>
-                      <div class="product-price-container">
-                        <!-- <del class="dis-price">₪179</del> -->
-                        <span class="fix-price">₪140.00</span>
-                      </div>
-                      <!-- .product-price-container -->
-                      <div class="item-content">
+						<div class="product-title-wrapper">
+							<h2 class="product-title">שורט אידריס</h2>
+							<div class="product-price-container">
+							  <!-- <del class="dis-price">₪179</del> -->
+							  <span class="fix-price">₪140.00</span>
+							</div>
+							<!-- .product-price-container -->
+						</div>
+						<!-- product-title-wrapper -->
+               
+                      <div class="item-content mobile-hide">
                         <p>כאן יופיע תיאור קצר על המוצר. לדוגמה חולצת פסים בגזרת אוברסייז מהבד הכי נעים.</p>
                       </div>
                       <!-- .item-content -->
@@ -236,10 +241,24 @@
                         <span class="plus">+</span>
                       </div>
                       <!-- .product-quantity -->
-                      <form class="single-cart clear-fix" method="post">
+                      <div class="single-cart clear-fix" method="post">
                         <button type="submit" name="add-ro-cart" class="add_to_cart_button"> הוספה לסל </button>
-                      </form>
+                      </div>
                       <!-- .single-cart -->
+					  <div class="share-on desktop-hide">
+						<ul>
+						  <li>
+							<a target="_blank" href="#">
+							  <img alt="product" src="images/link.png">
+							</a>
+						  </li>
+						  <li>
+							<a target="_blank" href="#">
+							  <img alt="product" src="images/wup-icon.png">רוצים לשתף עם חברים? </a>
+						  </li>
+						</ul>
+					  </div>
+					  <!-- .share-on -->
                       <div class="faq-section clear-fix">
                         <ul class="faq-list">
                           <li class="faq-item">
