htm a tag fixed

--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
                     <div class="share-on mobile-hide">
                       <ul>
                         <li>
-                          <a target="_blank" href="#">
+                          <a target="_self" href="#">
                             <img alt="product" src="images/link.png" loading="lazy">
                           </a>
                         </li>
                         <li>
-                          <a target="_blank" href="#">
+                          <a target="_self" href="#">
                             <i class="fa-brands fa-whatsapp"></i> רוצים לשתף עם חברים? </a>
                         </li>
                       </ul>
@@ -248,12 +248,12 @@
                       <div class="share-on desktop-hide">
                         <ul>
                           <li>
-                            <a target="_blank" href="#">
+                            <a target="_self" href="#">
                               <img alt="product" src="images/link.png" loading="lazy">
                             </a>
                           </li>
                           <li>
-                            <a target="_blank" href="#">
+                            <a target="_self" href="#">
                               <i class="fa-brands fa-whatsapp"></i> רוצים לשתף עם חברים? </a>
                           </li>
                         </ul>
@@ -264,7 +264,7 @@
                           <li class="faq-item">
                             <div class="faq-title">
                               <h3>
-                                <a target="_blank" href="#">תיאור המוצר</a>
+                                <a target="_self" href="#">תיאור המוצר</a>
                               </h3>
                             </div>
                             <!-- .faq-title -->
@@ -277,7 +277,7 @@
                           <li class="faq-item">
                             <div class="faq-title">
                               <h3>
-                                <a target="_blank" href="#">תיאור המוצר</a>
+                                <a target="_self" href="#">תיאור המוצר</a>
                               </h3>
                             </div>
                             <!-- .faq-title -->
@@ -290,7 +290,7 @@
                           <li class="faq-item">
                             <div class="faq-title">
                               <h3>
-                                <a target="_blank" href="#">תיאור המוצר</a>
+                                <a target="_self" href="#">תיאור המוצר</a>
                               </h3>
                             </div>
                             <!-- .faq-title -->
