--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <i class="fa-regular fa-heart"></i>
                               </a>
                               <a href="#">
-                               <fegure><img alt="product" src="images/products/product-4.png" loading="lazy"></fegure> 
+                               <figure><img alt="product" src="images/products/product-4.png" loading="lazy"></figure> 
                               </a>
                               <a href="images/products/product-4.png" role="button" class="woocommerce-product-gallery__trigger" aria-haspopup="dialog" aria-label="View full-screen image gallery">
                                 <i class="fa-solid fa-magnifying-glass-plus"></i>
@@ -123,7 +123,7 @@
                                 <i class="fa-regular fa-heart"></i>
                               </a>
                               <a href="#">
-                                <fegure> <img alt="product" src="images/products/product-5.png" loading="lazy"></fegure>
+                                <figure> <img alt="product" src="images/products/product-5.png" loading="lazy"></figure>
                               </a>
                               <a href="images/products/product-5.png" role="button" class="woocommerce-product-gallery__trigger" aria-haspopup="dialog" aria-label="View full-screen image gallery">
                                 <i class="fa-solid fa-magnifying-glass-plus"></i>
@@ -137,19 +137,19 @@
                         <div class="pager-thumbnail-wrapper">
                           <div class="pager-thumbnail">
                             <div class="pager-thumb active">
-                              <fegure> <img alt="product" src="images/products/product-1.png" loading="lazy"></fegure>
+                              <figure> <img alt="product" src="images/products/product-1.png" loading="lazy"></figure>
                             </div>
                             <div class="pager-thumb">
-                              <fegure><img alt="product" src="images/products/product-2.png" loading="lazy"></fegure>
+                              <figure><img alt="product" src="images/products/product-2.png" loading="lazy"></figure>
                             </div>
                             <div class="pager-thumb">
-                              <fegure><img alt="product" src="images/products/product-3.png" loading="lazy"></fegure>
+                              <figure><img alt="product" src="images/products/product-3.png" loading="lazy"></figure>
                             </div>
                             <div class="pager-thumb">
-                              <fegure><img alt="product" src="images/products/product-4.png" loading="lazy"></fegure>
+                              <figure><img alt="product" src="images/products/product-4.png" loading="lazy"></figure>
                             </div>
                             <div class="pager-thumb">
-                              <fegure> <img alt="product" src="images/products/product-5.png" loading="lazy"></fegure>
+                              <figure> <img alt="product" src="images/products/product-5.png" loading="lazy"></figure>
                             </div>
                           </div>
                           <!-- .pager-thumbnail---->
@@ -163,7 +163,7 @@
                       <ul>
                         <li>
                           <a target="_self" href="#">
-                            <fegure> <img alt="product" src="images/link.png" loading="lazy"></fegure>
+                            <figure> <img alt="product" src="images/link.png" loading="lazy"></figure>
                           </a>
                         </li>
                         <li>
@@ -249,7 +249,7 @@
                         <ul>
                           <li>
                             <a target="_self" href="#">
-                              <fegure> <img alt="product" src="images/link.png" loading="lazy"></fegure>
+                              <figure> <img alt="product" src="images/link.png" loading="lazy"></figure>
                             </a>
                           </li>
                           <li>
@@ -325,7 +325,7 @@
                       <div class="product-item">
                         <div class="product-thumb">
                           <a class="thumbnail" href="#">
-                            <fegure>  <img alt="product" src="images/products/related-product-1.png"></fegure>
+                            <figure>  <img alt="product" src="images/products/related-product-1.png"></figure>
                           </a>
                           <div class="pruduct-buttons">
                             <a href="#" class="wish-list mobile-hide">
@@ -351,7 +351,7 @@
                       <div class="product-item">
                         <div class="product-thumb ">
                           <a class="thumbnail" href="#">
-                            <fegure>  <img alt="product" src="images/products/related-product-2.png"></fegure>
+                            <figure>  <img alt="product" src="images/products/related-product-2.png"></figure>
                           </a>
                           <div class="pruduct-buttons">
                             <a href="#" class="wish-list mobile-hide">
@@ -377,7 +377,7 @@
                       <div class="product-item">
                         <div class="product-thumb ">
                           <a class="thumbnail" href="#">
-                            <fegure> <img alt="product" src="images/products/related-product-3.png"></fegure>
+                            <figure> <img alt="product" src="images/products/related-product-3.png"></figure>
                           </a>
                           <div class="pruduct-buttons">
                             <a href="#" class="wish-list mobile-hide">
@@ -403,7 +403,7 @@
                       <div class="product-item">
                         <div class="product-thumb ">
                           <a class="thumbnail" href="#">
-                            <fegure> <img alt="product" src="images/products/related-product-4.png"></fegure>
+                            <figure> <img alt="product" src="images/products/related-product-4.png"></figure>
                           </a>
                           <div class="pruduct-buttons">
                             <a href="#" class="wish-list mobile-hide">
@@ -429,7 +429,7 @@
                       <div class="product-item">
                         <div class="product-thumb ">
                           <a class="thumbnail" href="#">
-                            <fegure><img alt="product" src="images/products/related-product-2.png"></fegure>
+                            <figure><img alt="product" src="images/products/related-product-2.png"></figure>
                           </a>
                           <div class="pruduct-buttons">
                             <a href="#" class="wish-list mobile-hide">
